# ckip-2-tei

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.py
ckip2tei/ckip/: segmenter.py
ckip2tei/ckip/model/: ckip.py
ckip2tei/ckip/transformer/: transformer.py
ckip2tei/config/: __init__.py  ckip.py
ckip2tei/tei/: tei.py
ckip2tei/tei/tags/body/taggers/: __init__.py  base.py
ckip2tei/tei/tags/body/taggers/cleaners/: __init__.py  cleaners.py
ckip2tei/tei/tags/meta/: __init__.py  meta.py
ckip2tei/tei/utils/: __init__.py
